--- a/index.html
+++ b/index.html
@@ -115,22 +115,30 @@
             </div> -->
             <div class="carousel-item active">
                 <div class="container-fluid carousel-img-aftercare">
-                    <img class="img-fluid w-100" src="./assets/img/banners/aftercare.png" alt="">
+                    <a href="productos.html#tattoo-aftercare"><img class="img-fluid w-100"
+                            src="./assets/img/banners/aftercare.png" alt="">
+                    </a>
                 </div>
             </div>
             <div class="carousel-item">
                 <div class="container-fluid carousel-img-piercing">
-                    <img class="img-fluid w-100" src="./assets/img/banners/piercing.png" alt="">
+                    <a href="productos.html#piercing"><img class="img-fluid w-100"
+                            src="./assets/img/banners/piercing.png" alt="">
+                    </a>
                 </div>
             </div>
             <div class="carousel-item">
                 <div class="container-fluid carousel-img-protect">
-                    <img class="img-fluid w-100" src="./assets/img/banners/protect.png" alt="">
+                    <a href="productos.html#pro-tec"><img class="img-fluid w-100" src="./assets/img/banners/protect.png"
+                            alt="">
+                    </a>
                 </div>
             </div>
             <div class="carousel-item">
                 <div class="container-fluid carousel-img-skincare">
-                    <img class="img-fluid w-100" src="./assets/img/banners/skincare.png" alt="">
+                    <a href="productos.html#tattoo-skincare"><img class="img-fluid w-100"
+                            src="./assets/img/banners/skincare.png" alt="">
+                    </a>
                 </div>
             </div>
         </div>
@@ -188,17 +196,27 @@
                                 <div class="carousel-item active">
                                     <div class="row">
                                         <div class="col-3">
-                                            <img class="amb-img" src="assets/img/alienk_embajador.png"
-                                                alt="Alienk Inspieral">
+                                            <a href="https://www.instagram.com/alieninkspiral/" target="_blank"><img
+                                                    class="amb-img" src="assets/img/alienk_embajador.png"
+                                                    alt="Alienk Inspieral"></a>
                                         </div>
                                         <div class="col-3">
-                                            <img class="amb-img" src="assets/img/dani_embajador.png" alt="Dani Parta">
+                                            <a href="https://www.instagram.com/daniparta/" target="_blank"><img
+                                                    class="amb-img" src="assets/img/dani_embajador.png"
+                                                    alt="Dani Parta">
+                                            </a>
                                         </div>
                                         <div class="col-3">
-                                            <img class="amb-img" src="assets/img/edetsu_embajador.png" alt="Edetsu">
+                                            <a href="https://www.instagram.com/edetsu/" target="_blank"><img
+                                                    class="amb-img" src="assets/img/edetsu_embajador.png" alt="Edetsu">
+                                            </a>
                                         </div>
+
                                         <div class="col-3">
-                                            <img class="amb-img" src="assets/img/panke_embajador.png" alt="Panke 0M">
+                                            <a href="https://www.instagram.com/pankeom/">
+                                                <img class="amb-img" src="assets/img/panke_embajador.png"
+                                                    alt="Panke 0M">
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
@@ -264,33 +282,36 @@
                                 <div class="carousel-item active">
                                     <div class="row">
                                         <div class="col-12 d-flex">
-                                            <img class="amb-img  m-auto" src="assets/img/alienk_embajador.png"
-                                                alt="Alienk Inspieral">
+                                            <a href="https://www.instagram.com/alieninkspiral/" target="_blank"><img
+                                                    class="amb-img  m-auto" src="assets/img/alienk_embajador.png"
+                                                    alt="Alienk Inspieral"></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="carousel-item ">
                                     <div class="row">
                                         <div class="col-12 d-flex">
-                                            <img class="amb-img  m-auto" src="assets/img/dani_embajador.png"
-                                                alt="Alienk Inspieral">
+                                            <a href="https://www.instagram.com/daniparta/" target="_blank"> <img
+                                                    class="amb-img  m-auto" src="assets/img/dani_embajador.png"
+                                                    alt="Dani Parta"></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="carousel-item ">
                                     <div class="row">
                                         <div class="col-12 d-flex">
-                                            <img class="amb-img m-auto" src="assets/img/edetsu_embajador.png"
-                                                alt="Alienk Inspieral">
+                                            <a href="https://www.instagram.com/edetsu/" target="_blank"><img
+                                                    class="amb-img m-auto" src="assets/img/edetsu_embajador.png"
+                                                    alt="Edetsu"></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="carousel-item ">
-                                    <div class="row">
+                                    <div class="row"><a href="https://www.instagram.com/pankeom/" target="_blank"></a>
                                         <div class="col-12 d-flex">
                                             <img class="amb-img  m-auto" src="assets/img/panke_embajador.png"
-                                                alt="Alienk Inspieral">
-                                        </div>
+                                                alt="Panke 0m">
+                                        </div></a>
                                     </div>
                                 </div>
                                 <div class="carousel-item">
@@ -347,28 +368,35 @@
                                 <div class="carousel-item active">
                                     <div class="row">
                                         <div class="col-12">
-                                            <img class="amb-img" src="assets/img/lineas/aftercare.png" alt="Aftercare">
+                                            <a href="productos.html#tattoo-aftercare"> <img class="amb-img"
+                                                    src="assets/img/lineas/aftercare.png" alt="Aftercare"></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="carousel-item">
                                     <div class="row">
                                         <div class="col-12">
-                                            <img class="amb-img" src="assets/img/lineas/piercing.png" alt="Piercing">
+                                            <a href="productos.html#piercing"> <img class="amb-img"
+                                                    src="assets/img/lineas/piercing.png" alt="Piercing">
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="carousel-item">
                                     <div class="row">
                                         <div class="col-12">
-                                            <img class="amb-img" src="assets/img/lineas/protect.png" alt="Protect">
+                                            <a href="productos.html#pro-tec"><img class="amb-img"
+                                                    src="assets/img/lineas/protect.png" alt="Protect">
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="carousel-item">
                                     <div class="row">
                                         <div class="col-12">
-                                            <img class="amb-img" src="assets/img/lineas/skincare.png" alt="Skincare">
+                                            <a href="productos.html#tattoo-skincare"> <img class="amb-img"
+                                                    src="assets/img/lineas/skincare.png" alt="Skincare">
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
@@ -425,29 +453,29 @@
                                 <div class="container">
                                     <div class="row mb-3">
                                         <div class="mc-field-group col-6 mr-2"><label for="mce-FNAME"
-                                                class="form-label">First Name
+                                                class="form-label">Nombre
                                             </label><input type="text" name="FNAME" class="text form-control"
                                                 id="mce-FNAME" value=""></div>
 
                                         <div class="mc-field-group col-6 ml-2"><label for="mce-LNAME"
-                                                class="form-label">Last Name
+                                                class="form-label">Apellido
                                             </label><input type="text" name="LNAME" class="text form-control"
                                                 id="mce-LNAME" value=""></div>
                                     </div>
                                     <div class="row  mb-3">
                                         <div class="mc-field-group col-12"><label for="mce-EMAIL"
-                                                class="form-label">Email Address <span
+                                                class="form-label">Correo Electrónico <span
                                                     class="asterisk"></span></label><input type="email" name="EMAIL"
                                                 class="required email form-control" id="mce-EMAIL" required="" value="">
                                         </div>
                                     </div>
                                     <div class="row mb-3">
                                         <div class="mc-field-group col-6"><label for="mce-PHONE"
-                                                class="form-label">Phone Number
+                                                class="form-label">Teléfono Celular
                                             </label><input type="text" name="PHONE" class="REQ_CSS form-control"
                                                 id="mce-PHONE" value=""></div>
                                         <div class="mc-field-group size1of2 col-6"><label for="mce-BIRTHDAY-month"
-                                                class="form-label">Birthday
+                                                class="form-label">Cumpleaños
                                             </label>
                                             <div class="datefield row">
                                                 <div class="subfield monthfield col-6">
@@ -478,7 +506,7 @@
                                 <div class="optionalParent row  mb-3">
                                     <div class="clear foot col-12">
                                         <input type="submit" name="subscribe" id="mc-embedded-subscribe"
-                                            class="button mailchimp-submit" value="Subscribe">
+                                            class="button mailchimp-submit" value="Suscribirse">
                                     </div>
                                 </div>
                             </div>
@@ -529,8 +557,24 @@
             </div>
             <div class="row text-light">
                 <div class="col-12 col-lg-8 mx-auto text-center">
-                    <p class="mb-0 text-footer">&copy; 2025 Neek'dna. Todos los derechos reservados.
+                    <p class="mb-0 text-tos3">&copy; 2025 Neek'dna. Todos los derechos reservados.
                     </p>
+                </div>
+                <div class="col-12 col-lg-8 mx-auto text-center">
+                    <a class="anchor-numb"
+                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:44eab3f6-523c-47fe-950a-f2e8487f2fc1"
+                        target="_blank">
+                        <p class="mb-0 text-tos">Términos y condiciones
+                        </p>
+                    </a>
+                </div>
+                <div class="col-12 col-lg-8 mx-auto text-center">
+                    <a class="anchor-numb"
+                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:5b437d54-88a8-4e3f-9184-73fd0800029b"
+                        target="_blank">
+                        <p class="mb-0 text-tos">Aviso de Privacidad
+                        </p>
+                    </a>
                 </div>
             </div>
         </div>
