--- a/producto/skin-tattoo-moisturiser.html
+++ b/producto/skin-tattoo-moisturiser.html
@@ -166,10 +166,7 @@
                     </div>
 
                     <!-- Start Info Section -->
-                    <div class="row">
-                        <div class="col-6"><img src="../assets/img/icons-row.svg" alt="Icons" class="img-fluid mt-4">
-                        </div>
-                    </div>
+
                     <div class="row">
                         <div class="col-12">
                             <div class="collapse-bg">
@@ -319,7 +316,7 @@
         </div>
 
         <div class="container">
-            <h2 class="more-products text-center">¿Ya viste nuestros kits Skincare y Tattoo Aftercare?
+            <h2 class="more-products text-center">¿Ya viste nuestros productos Tattoo Skincare y Tatto Aftercare?
             </h2>
             <div class="row">
                 <div class="col-12">
@@ -394,6 +391,22 @@
                 <div class="col-12 col-lg-8 mx-auto text-center">
                     <p class="mb-0 text-footer">&copy; 2025 Neek'dna. Todos los derechos reservados.
                     </p>
+                </div>
+                <div class="col-12 col-lg-8 mx-auto text-center">
+                    <a class="anchor-numb"
+                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:44eab3f6-523c-47fe-950a-f2e8487f2fc1"
+                        target="_blank">
+                        <p class="mb-0 text-tos">Términos y condiciones
+                        </p>
+                    </a>
+                </div>
+                <div class="col-12 col-lg-8 mx-auto text-center">
+                    <a class="anchor-numb"
+                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:5b437d54-88a8-4e3f-9184-73fd0800029b"
+                        target="_blank">
+                        <p class="mb-0 text-tos">Aviso de Privacidad
+                        </p>
+                    </a>
                 </div>
             </div>
         </div>
