--- a/productos.html
+++ b/productos.html
@@ -101,7 +101,7 @@
         </div>
 
         <div class="row row-product">
-            <div class="col-xs-12 col-lg-6">
+            <div class="col-xs-12 col-lg-6" id="tattoo-aftercare">
                 <h2 class="product-title"> TATTOO AFTERCARE</h2>
                 <div class="row">
                     <div class="col-6 text-center">
@@ -123,7 +123,7 @@
                 </div>
             </div>
 
-            <div class="col-xs-12 col-lg-6">
+            <div class="col-xs-12 col-lg-6" id="tattoo-skincare">
                 <h2 class="product-title"> TATTOO SKINCARE</h2>
                 <div class="row">
                     <div class="col-6 text-center">
@@ -139,7 +139,7 @@
         </div>
 
 
-        <div class="row row-product">
+        <div class="row row-product" id="piercing">
             <div class="col-xs-12 col-lg-6">
                 <h2 class="product-title"> PIERCING AFTERCARE</h2>
                 <div class="row">
@@ -163,7 +163,7 @@
             </div>
         </div>
 
-        <div class="row row-product">
+        <div class="row row-product" id="pro-tec">
             <div class="col-12">
                 <h2 class="product-title">PRO-TEC</h2>
                 <div class="row">
@@ -244,6 +244,22 @@
                 <div class="col-12 col-lg-8 mx-auto text-center">
                     <p class="mb-0 text-footer">&copy; 2025 Neek'dna. Todos los derechos reservados.
                     </p>
+                </div>
+                <div class="col-12 col-lg-8 mx-auto text-center">
+                    <a class="anchor-numb"
+                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:44eab3f6-523c-47fe-950a-f2e8487f2fc1"
+                        target="_blank">
+                        <p class="mb-0 text-tos">Términos y condiciones
+                        </p>
+                    </a>
+                </div>
+                <div class="col-12 col-lg-8 mx-auto text-center">
+                    <a class="anchor-numb"
+                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:5b437d54-88a8-4e3f-9184-73fd0800029b"
+                        target="_blank">
+                        <p class="mb-0 text-tos">Aviso de Privacidad
+                        </p>
+                    </a>
                 </div>
             </div>
         </div>
