--- a/contacto.html
+++ b/contacto.html
@@ -96,18 +96,18 @@
                                         <div class="container">
                                             <div class="row mb-3">
                                                 <div class="mc-field-group col-6 mr-2"><label for="mce-FNAME"
-                                                        class="form-label">First Name
+                                                        class="form-label">Nombre
                                                     </label><input type="text" name="FNAME" class="text form-control"
                                                         id="mce-FNAME" value=""></div>
 
                                                 <div class="mc-field-group col-6 ml-2"><label for="mce-LNAME"
-                                                        class="form-label">Last Name
+                                                        class="form-label">Apellido
                                                     </label><input type="text" name="LNAME" class="text form-control"
                                                         id="mce-LNAME" value=""></div>
                                             </div>
                                             <div class="row  mb-3">
                                                 <div class="mc-field-group col-12"><label for="mce-EMAIL"
-                                                        class="form-label">Email Address <span
+                                                        class="form-label">Correo Electrónico <span
                                                             class="asterisk"></span></label><input type="email"
                                                         name="EMAIL" class="required email form-control" id="mce-EMAIL"
                                                         required="" value="">
@@ -115,11 +115,11 @@
                                             </div>
                                             <div class="row mb-3">
                                                 <div class="mc-field-group col-6"><label for="mce-PHONE"
-                                                        class="form-label">Phone Number
+                                                        class="form-label">Teléfono Celular
                                                     </label><input type="text" name="PHONE" class="REQ_CSS form-control"
                                                         id="mce-PHONE" value=""></div>
                                                 <div class="mc-field-group size1of2 col-6"><label
-                                                        for="mce-BIRTHDAY-month" class="form-label">Birthday
+                                                        for="mce-BIRTHDAY-month" class="form-label">Cumpleaños
                                                     </label>
                                                     <div class="datefield row">
                                                         <div class="subfield monthfield col-6">
@@ -152,7 +152,7 @@
                                         <div class="optionalParent row  mb-3">
                                             <div class="clear foot col-12">
                                                 <input type="submit" name="subscribe" id="mc-embedded-subscribe"
-                                                    class="button mailchimp-submit" value="Subscribe">
+                                                    class="button mailchimp-submit" value="Suscribirse">
                                             </div>
                                         </div>
                                     </div>
@@ -167,7 +167,9 @@
         <div class="row container">
             <div class="row text-center mt-1 col-10 m-auto">
                 <div class="col-lg-8 m-auto ">
-                    <h1 class="guarantee-title">Neek’dna ofrece sus productos de cuidado para piel tatuada y piercings
+                    <h1 class="guarantee-title">Adquiere los productos Neek’dna para el cuidado de la piel tatuada y
+                        piercings
+                        en:
                     </h1>
                 </div>
             </div>
@@ -175,16 +177,26 @@
 
         <div class="bg-gray  mt-4 mb-4 p-5">
             <div class=" col-lg-8 m-auto row d-flex align-items-start">
+
                 <div class=" col-4 d-flex align-items-center justify-content-center flex-column">
-                    <img src="/assets/img/showroom.svg" height="60" width="60" />
+                    <a class="anchor-numb"
+                        href="https://www.google.com/maps?ll=19.46246,-99.184733&z=16&t=m&hl=es-419&gl=MX&mapclient=embed&cid=14180489545403861668"
+                        target="_blank"><img src="/assets/img/showroom.svg" height="60" width="60" />
+                    </a>
                     <h3 class="icon-subtitle">Showroom CDMX: visítanos.</h3>
+
                 </div>
+
                 <div class="col-4 d-flex align-items-center justify-content-center flex-column">
-                    <img src="/assets/img/tattoo-artist.svg" height="60" width="60" />
+                    <a target="_blank"
+                        href="https://api.whatsapp.com/send?phone=525582461413&text=%C2%A1Hola!%20Estoy%20en%20la%20tienda%20Neekdna%20Shop%20y%20quiero%20pedir%20m%C3%A1s%20informaci%C3%B3n"><img
+                            src="/assets/img/tattoo-artist.svg" height="60" width="60" /></a>
                     <h3 class="icon-subtitle">¿Eres tatuador o piercer? Escríbenos.</h3>
                 </div>
                 <div class="col-4 d-flex align-items-center justify-content-center flex-column">
-                    <img src="/assets/img/marketplace.svg" height="60" width="60" />
+                    <a href="https://www.mercadolibre.com.mx/pagina/neekdna" target="_blank"><img
+                            src="/assets/img/marketplace.svg" height="60" width="60" />
+                    </a>
                     <h3 class="icon-subtitle">Todo Neek’dna a un clic</h3>
                 </div>
 
@@ -249,6 +261,22 @@
                 <div class="col-12 col-lg-8 mx-auto text-center">
                     <p class="mb-0 text-footer">&copy; 2025 Neek'dna. Todos los derechos reservados.
                     </p>
+                </div>
+                <div class="col-12 col-lg-8 mx-auto text-center">
+                    <a class="anchor-numb"
+                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:44eab3f6-523c-47fe-950a-f2e8487f2fc1"
+                        target="_blank">
+                        <p class="mb-0 text-tos">Términos y condiciones
+                        </p>
+                    </a>
+                </div>
+                <div class="col-12 col-lg-8 mx-auto text-center">
+                    <a class="anchor-numb"
+                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:5b437d54-88a8-4e3f-9184-73fd0800029b"
+                        target="_blank">
+                        <p class="mb-0 text-tos">Aviso de Privacidad
+                        </p>
+                    </a>
                 </div>
             </div>
         </div>
