--- a/producto/tattoo-aftercare.html
+++ b/producto/tattoo-aftercare.html
@@ -166,10 +166,6 @@
 
                     <!-- Start Info Section -->
                     <div class="row">
-                        <div class="col-6"><img src="../assets/img/icons-row.svg" alt="Icons" class="img-fluid mt-4">
-                        </div>
-                    </div>
-                    <div class="row">
                         <div class="col-12">
                             <div class="collapse-bg">
                                 <div class="row">
@@ -200,11 +196,11 @@
                                 </div>
                                 <div class="collapse" id="collapseIngredientes">
                                     <div class="card collapse-body">
-                                        Extracto de Aloe Vera (Aloe Barbadensis)
-                                        Extracto de Caléndula (Caléndula Officinalis)
-                                        Extracto de Lavanda (Lavandula Angustifolia)
-                                        Extracto de Manzanilla (Chamomilla Recutita)
-                                        Manteca de Karité (Butyrospermum Parkii Butter)
+                                        Extracto de Aloe Vera (Aloe Barbadensis)<br>
+                                        Extracto de Caléndula (Caléndula Officinalis)<br>
+                                        Extracto de Lavanda (Lavandula Angustifolia)<br>
+                                        Extracto de Manzanilla (Chamomilla Recutita)<br>
+                                        Manteca de Karité (Butyrospermum Parkii Butter)<br>
                                     </div>
                                 </div>
                             </div>
@@ -218,9 +214,10 @@
                                 <div class="collapse" id="collapsePrecauciones">
                                     <div class="card collapse-body">
                                         Evitar el contacto con el agua de mar o albercas, mientras dura el proceso de
-                                        cicatrización.
-                                        No exponerse al sol. . Suspenda su empleo si se presentan signos de irritación,
-                                        sarpullido o hipersensibilidad a . . los ingredientes.
+                                        cicatrización.<br>
+                                        No exponerse al sol.<br>
+                                        Suspenda su empleo si se presentan signos de irritación,
+                                        sarpullido o hipersensibilidad a los ingredientes.
                                     </div>
                                 </div>
                             </div>
@@ -328,7 +325,7 @@
         </div>
 
         <div class="container">
-            <h2 class="more-products text-center">¿Ya viste nuestros kits Skincare y Tattoo Aftercare?
+            <h2 class="more-products text-center">¿Ya viste nuestros productos Tattoo Skincare y Tatto Aftercare?
             </h2>
             <div class="row">
                 <div class="col-12">
@@ -401,6 +398,22 @@
                 <div class="col-12 col-lg-8 mx-auto text-center">
                     <p class="mb-0 text-footer">&copy; 2025 Neek'dna. Todos los derechos reservados.
                     </p>
+                </div>
+                <div class="col-12 col-lg-8 mx-auto text-center">
+                    <a class="anchor-numb"
+                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:44eab3f6-523c-47fe-950a-f2e8487f2fc1"
+                        target="_blank">
+                        <p class="mb-0 text-tos">Términos y condiciones
+                        </p>
+                    </a>
+                </div>
+                <div class="col-12 col-lg-8 mx-auto text-center">
+                    <a class="anchor-numb"
+                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:5b437d54-88a8-4e3f-9184-73fd0800029b"
+                        target="_blank">
+                        <p class="mb-0 text-tos">Aviso de Privacidad
+                        </p>
+                    </a>
                 </div>
             </div>
         </div>
