--- a/producto/skin-tattoo-moisturiser.html
+++ b/producto/skin-tattoo-moisturiser.html
@@ -178,12 +178,13 @@
                                 </div>
                                 <div class="collapse" id="collapseBeneficios">
                                     <div class="card collapse-body">
-                                        Aceite de Almendras Dulces (Prunus Amygdalus Dulcis Oil)
-                                        Aceite de Pepita de Uva (Vitis Vinifera Seed Oil)
-                                        Glicerina (Glyceril)
-                                        Manteca de Karité (Butyrospermum Parkii Butter)
-                                        Provitamina B5 (Dexpantenol)
-                                        Tocoferol (Vitamina E)
+                                        Su composición única garantiza un resultado perfecto. Sus principales activos,
+                                        la vitamina E, Aceite de Pepita de Uva y Provitamina B5, ingredientes con
+                                        propiedades hidratantes, antiinflamatorias y regeneradoras.<br>
+                                        Suaviza e hidrata tu piel ayudándola a mantener los colores del tatuaje firmes y
+                                        brillantes.<br>
+                                        El FPS (factor de protección solar) protege la piel de la radiación ultravioleta
+                                        y retrasa los signos de envejecimiento de la piel.
                                     </div>
                                 </div>
                             </div>
@@ -197,12 +198,12 @@
                                 </div>
                                 <div class="collapse" id="collapseIngredientes">
                                     <div class="card collapse-body">
-                                        Aceite de Almendras Dulces (Prunus Amygdalus Dulcis Oil)
-                                        Aceite de Pepita de Uva (Vitis Vinifera Seed Oil)
-                                        Glicerina (Glyceril)
-                                        Manteca de Karité (Butyrospermum Parkii Butter)
-                                        Provitamina B5 (Dexpantenol)
-                                        Tocoferol (Vitamina E)
+                                        Aceite de Almendras Dulces (Prunus Amygdalus Dulcis Oil)<br>
+                                        Aceite de Pepita de Uva (Vitis Vinifera Seed Oil)<br>
+                                        Glicerina (Glyceril)<br>
+                                        Manteca de Karité (Butyrospermum Parkii Butter)<br>
+                                        Provitamina B5 (Dexpantenol)<br>
+                                        Tocoferol (Vitamina E)<br>
                                     </div>
                                 </div>
                             </div>
@@ -279,7 +280,7 @@
                             <li class="recommendations-carousel__slide">
                                 <figure>
                                     <div>
-                                        <img src="../assets/img/reccomendations/1-lava-tus-manos.svg" alt="">
+                                        <img src="../assets/img/reccomendations/1-agite-antes-de-cada-uso.svg" alt="">
                                     </div>
 
                                 </figure>
@@ -287,7 +288,7 @@
                             <li class="recommendations-carousel__slide">
                                 <figure>
                                     <div>
-                                        <img src="../assets/img/reccomendations/2-aplique-sobre-la-zona.svg" alt="">
+                                        <img src="../assets/img/reccomendations/2-aplique-extiende.svg" alt="">
                                     </div>
 
                                 </figure>
@@ -295,7 +296,7 @@
                             <li class="recommendations-carousel__slide">
                                 <figure>
                                     <div>
-                                        <img src="../assets/img/reccomendations/3-extienda-suavemente.svg" alt="">
+                                        <img src="../assets/img/reccomendations/3-piel-tatuada-protegida.svg" alt="">
                                     </div>
 
                                 </figure>
@@ -303,7 +304,7 @@
                             <li class="recommendations-carousel__slide">
                                 <figure>
                                     <div>
-                                        <img src="../assets/img/reccomendations/4-reaplique-varias-veces.svg" alt="">
+                                        <img src="../assets/img/reccomendations/4-reaplique-al-sentir.svg" alt="">
                                     </div>
 
                                 </figure>
