fix index footer

--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
             </div>
             <div class="row text-light">
                 <div class="col-12 col-lg-8 mx-auto text-center">
-                    <p class="mb-0 text-tos3">&copy; 2025 Neek'dna. Todos los derechos reservados.
+                    <p class="mb-0 text-footer">&copy; 2025 Neek'dna. Todos los derechos reservados.
                     </p>
                 </div>
                 <div class="col-12 col-lg-8 mx-auto text-center">
